tests/semantic_cases/invalid/typed_assignment_bool_to_integer.ob0
MODULE Main;
VAR flag: BOOLEAN;
VAR x: INTEGER;
BEGIN
  x := flag
END Main.
